fixed a little layout issue with the promo image in the product page

--- a/footer.css
+++ b/footer.css
@@ -135,8 +135,9 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 558.1px;
+  height: max-content;
   background-color: white;
+  padding-block: 66px;
 }
 
 .footer__content {
@@ -248,12 +249,12 @@
 
 
   .footer__text-container h2 {
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     margin-bottom: 0.5rem;
   }
 
   .footer__text-container a {
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 2.2rem;
   }
 
